log

Mon 14 Aug 2023 03:54:18 PM UTC: 
 tests:  0|7
total_score: 0/70
d4064e0
Thu 17 Aug 2023 02:45:35 AM UTC: 
 exercises.c | 63 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++-----
 1 file changed, 58 insertions(+), 5 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:48:12: error: ‘numPares’ may be used uninitialized [-Werror=maybe-uninitialized]
   48 |   *newSize = numPares;
      |   ~~~~~~~~~^~~~~~~~~~
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:69:10: error: ‘i’ is used uninitialized [-Werror=uninitialized]
   69 |   while(i<size1&&j<size2){
      |         ~^~~~~~
exercises.c:69:19: error: ‘j’ is used uninitialized [-Werror=uninitialized]
   69 |   while(i<size1&&j<size2){
      |                  ~^~~~~~
exercises.c:67:11: error: ‘k’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   67 |   int i,j,k;
      |           ^
cc1: all warnings being treated as errors
Compilation failed
bb0e387
Thu 17 Aug 2023 02:46:12 AM UTC: 
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:48:12: error: ‘numPares’ may be used uninitialized [-Werror=maybe-uninitialized]
   48 |   *newSize = numPares;
      |   ~~~~~~~~~^~~~~~~~~~
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:69:10: error: ‘i’ is used uninitialized [-Werror=uninitialized]
   69 |   while(i<size1&&j<size2){
      |         ~^~~~~~
exercises.c:69:19: error: ‘j’ is used uninitialized [-Werror=uninitialized]
   69 |   while(i<size1&&j<size2){
      |                  ~^~~~~~
exercises.c:67:11: error: ‘k’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   67 |   int i,j,k;
      |           ^
cc1: all warnings being treated as errors
Compilation failed
e1fd512
Thu 17 Aug 2023 02:48:13 AM UTC: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|3
total_score: 40/70
4f281f1
Fri 18 Aug 2023 12:01:08 AM UTC: 
 exercises.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  0|3
total_score: 40/70
0023c8a
Fri 18 Aug 2023 12:02:51 AM UTC: 
 exercises.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
 tests:  0|3
total_score: 40/70
0f159e8
